--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
 	</build>
 	<dependencies>
 		<dependency>
+			<groupId>com.twitter</groupId>
+			<artifactId>hbc-core</artifactId>
+			<version>1.3.0</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
@@ -102,6 +107,7 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.7.5</version>
 		</dependency>
+
 	</dependencies>
 	<properties>
 		<project.http.version>1.17.0-rc</project.http.version>
